--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </button>
 
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">CF - API's</a>
 
             <!-- Links -->
             <div class="collapse navbar-collapse justify-content-end" id="nav-content">
